--- a/index.html
+++ b/index.html
@@ -9,6 +9,14 @@
 <body>
 
     <script src=script.js></script>
+
+    <h1>1 - crie uma função que exiba uma mensagem no console</h1>
+    <p>2 - crie uma função que receba o seu nome como (parâmetro) e exiba no console</p>
+    <p>3 - crie uma função que receba nome, idade, e um estilo musical preferido (parâmetros) e exiba no console</p>
+    <p>4 - crie uma função que receba um filme, uma música (parâmetros) e exiba no console</p>
+    <p>5 - crie uma função que retorne o triplo do número recebido no parâmetro da função</p>
+    <p>6 - crie uma função que  verifique se uma  variável é true ou false</p>
     
 </body>
+
 </html>
